build/staging/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-service-api
  namespace: staging
spec:
  selector:
    matchLabels:
      app: ingest-service-api
  template:
    metadata:
      labels:
        app: ingest-service-api
    spec:
      containers:
      - name: ingest-service-api
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/ingest-service:latest
        args: ["npm", "run", "start:api"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
