build/staging/api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingest-service-api-service
  namespace: staging
spec:
  selector:
    app: ingest-service-api
  type: ClusterIP
  ports:
  - name: node
    port: 80
    targetPort: 80
